--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,19 +1,57 @@
-version: "3"
+version: '3.4'
 services:
+  mysqldb:
+    image: mysql:5.7
+    command: --default-authentication-plugin=mysql_native_password
+    restart: always
+    environment:
+      MYSQL_ROOT_PASSWORD: admin
+      MYSQL_DATABASE: registration
+    ports:
+      - "3306:3306"
+    volumes:
+      - db-data:/var/lib/mysql
+    networks:
+      - backend
+    healthcheck:
+      test: [ "CMD", "mysqladmin" ,"ping", "-h", "localhost" ]
+      timeout: 20s
+      retries: 10
+
+  adminer:
+    image: adminer
+    restart: always
+    ports:
+      - 8080:8080
+    networks:
+      - backend
+
   rabbitmq:
-    container_name: rabbitmq
     image: rabbitmq:management
     ports:
       - "5672:5672"
       - "15672:15672"
+    networks:
+      - backend
 
   notification:
-    container_name: notification
+    image: registration-app
+    container_name: registration-ap
     restart: on-failure
     build: .
+    environment:
+      TZ: GMT
     ports:
       - "8080:8080"
-    links:
-      - rabbitmq
+    networks:
+      - backend
     depends_on:
-      - rabbitmqwq
+      - mysqldb
+    links:
+      - "mysqldb:database"
+
+volumes:
+  db-data:
+
+networks:
+  backend:
